fixed dark mode issues

--- a/style.css
+++ b/style.css
@@ -17,10 +17,10 @@ margin-left: -20%;
 .card {
     text-align: center;
     /* display: flex; */
-    background-color: #FFFFFF;
     justify-content: center;
     margin-left: 20%;
     margin-right: 20%;
+    background-color: white;
     border: 1px solid #ccc;
     padding: 10px;
     margin-bottom: 10px;
@@ -62,7 +62,10 @@ margin-left: -20%;
     border-bottom: 2px solid gray;
     margin-right: 10px;
   }
-  
+  .muted-text {
+    color: #999999; /* muted color */
+    /* font-size: 0.8em; smaller font size */
+  }
   button {
     font-size: 16px;
     padding: 10px 20px;
